crates/icydb-core/tests/ui/validate_module_private.rs
use icydb_core::validate::validate;

fn main() {}
